# cerne

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  LICENSE-CC-BY-SA-4.0  README.md  ROADMAP.md  SPECIFICATION.md  makefile  package-lock.json  package.json  specs.ebnf
.github/workflows/: build.yml
examples/: index.ce
src/: cerne.cc
src/driver/: cli.cc
src/front/: lexer.cc
src/front/parser/: parser.cc  pratt.cc  printer.cc
src/front/parser/blueprints/: const.cc  elif.cc  else.cc  export.cc  for.cc  fun.cc  handler.hpp  if.cc  import.cc  let.cc  loop.cc  return.cc  until.cc  vardecl.cc  while.cc
src/front/parser/methods/: expect.cc  parameter.cc  path.cc  scope.cc  type.cc
src/front/sema/: symbtable.cc
src/front/sema/symbtable/: build.cc  resolve.cc
src/include/: cerne.hpp  errors.hpp  lexer.hpp  parser.hpp  sema.hpp  utils.hpp
src/include/parser/: ast.hpp  handler.hpp  node.hpp  types.hpp
src/include/sema/: symbtable.hpp
src/util/: cli.cc  debug_engine.cc  diag.cc  diag_engine.cc  json.cc  logger.cc  readf.cc  token.cc
stdlib/: LICENSE
tests/: conditions.ce  expressions.ce  import.ce  import_fail.ce  loops.ce  path.ce  ranges.ce  redefined_fail.ce  return42.ce  scope.ce  scope_fail.ce  test_auto.js  var.ce
